# sea-flags

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake-multi-platform.yml
includes/: seaflags.h
src/: seaflags.c
tests/: CMakeLists.txt  test_main.c
